<resources>
    <string name="Input_otp">Enter OTP</string>
    <string name="OK">OK</string>
    <string name="a1_info">A1 - Beginner</string>
    <string name="a2_info">A2 - Elementary</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account">Account</string>
    <string name="account_already_exists_with_this_email">An account already exists with this email</string>
    <string name="account_instruction">How to use</string>
    <string name="account_not_exist">Account does not exist</string>
    <string name="action_install_app">Install</string>
    <string name="action_open_fb">Open Facebook</string>
    <string name="action_open_web">Open Web</string>
    <string name="action_update_app">Update App</string>
    <string name="add_new">New</string>
    <string name="add_new_dictionary">Add New Dictionary</string>
    <string name="added_favorite">Added to Favorite!</string>
    <string name="ads_free">No Ads.</string>
    <string name="after_2_day">After 2 days</string>
    <string name="after_2_hours">After 2 hours</string>
    <string name="after_3_day">After 3 days</string>
    <string name="after_5_day">After 5 days</string>
    <string name="after_8_day">After 8 days</string>
    <string name="after_one_day">After 1 day</string>
    <string name="after_x_day">After %d days</string>
    <string name="all">All</string>
    <string name="all_blogs">All blog</string>
    <string name="all_exercises">All exercises</string>
    <string name="already_4e">4English PRO is ready!</string>
    <string name="already_have_account_bottom">Already have an account? Log in</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="amount">Amount</string>
    <string name="amount_number">Account number</string>
    <string name="and">and</string>
    <string name="andada">Andada</string>
    <string name="andada_font">fonts/andada/Andada-Regular.otf</string>
    <string name="android.credentials.TYPE_PASSWORD_CREDENTIAL">Password</string>
    <string name="androidx.credentials.TYPE_PUBLIC_KEY_CREDENTIAL">Passkey</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_intro_back_button">BACK</string>
    <string name="app_intro_done_button">DONE</string>
    <string name="app_intro_image_content_description">graphics</string>
    <string name="app_intro_next_button">NEXT</string>
    <string name="app_intro_skip_button">SKIP</string>
    <string name="app_name">4English</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply_code">Apply</string>
    <string name="apply_code_success">Code applied successfully!</string>
    <string name="audio_mark_id">"javascript:alert(audioMarkID('epub-media-overlay-playing','%s'))"</string>
    <string name="auto_register">Subscriptions automatically renew at the end of each period; manage your subscription through your Store account.</string>
    <string name="avatar_format">v1/users/%s/avatar</string>
    <string name="ayp_custom_action_left">YouTube player Custom action left</string>
    <string name="ayp_custom_action_right">YouTube player custom action right</string>
    <string name="ayp_full_screen_button">Full screen button</string>
    <string name="ayp_live">LIVE</string>
    <string name="ayp_null_time">0:00</string>
    <string name="ayp_open_video_in_youtube">Open video in YouTube</string>
    <string name="ayp_play_button">Play button</string>
    <string name="b1_info">B1 - Lower Intermediate</string>
    <string name="b2_info">B2 - Upper Intermediate</string>
    <string name="back_to_review">Back to review</string>
    <string name="bank_name">Bank</string>
    <string name="bank_owner">Account holder</string>
    <string name="bb_l1">Baby steps</string>
    <string name="bb_l2">No plural!</string>
    <string name="bb_l3">Faster</string>
    <string name="bb_l4">High points</string>
    <string name="bb_l5">Trump the Timeless treasure</string>
    <string name="bb_l6">Non continuous</string>
    <string name="bb_level0">Basic</string>
    <string name="begin_download">Downloading…</string>
    <string name="best_choice">Best Choice</string>
    <string name="black_rgb">\#000000</string>
    <string name="blue_rgb">\#0000ff</string>
    <string name="book">Books</string>
    <string name="book_detail">Detail</string>
    <string name="book_store">Book store</string>
    <string name="bookmark_empty">Your favorites is empty!</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="btn_add_fav">Add to favorite</string>
    <string name="btn_add_friend_folder">"Add your friend's vocab packs"</string>
    <string name="btn_add_level">+ Level</string>
    <string name="btn_add_type">+ Type</string>
    <string name="btn_buy_pro">Update Pro</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_challenge">Invite</string>
    <string name="btn_chat">Chat with team</string>
    <string name="btn_chat_with_page">Chat with Page</string>
    <string name="btn_check">Check</string>
    <string name="btn_close_app">Close 4English</string>
    <string name="btn_close_learn">Close</string>
    <string name="btn_confirm_exit_game">Yes</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_copy_id">Copy ID</string>
    <string name="btn_decline_invite">Decline</string>
    <string name="btn_dialog_view">View</string>
    <string name="btn_done">Done</string>
    <string name="btn_dont_know">"Don't know"</string>
    <string name="btn_download">Download</string>
    <string name="btn_edit_img">Choose another photo</string>
    <string name="btn_edit_remind_time">Remind this word later?</string>
    <string name="btn_enable_notif">Turn on</string>
    <string name="btn_find_your_document">Find your document</string>
    <string name="btn_gen_link">Create file link</string>
    <string name="btn_gen_link_again">ReCreate file link</string>
    <string name="btn_get_img">Your image</string>
    <string name="font_bold">fonts/OpenSans-Bold.ttf</string>
    <string name="font_semi_bold">fonts/OpenSans-SemiBold.ttf</string>
    <string name="half_speed">1/2x</string>
    <string name="lato_font">fonts/lato/Lato-Regular.ttf</string>
    <string name="lora_font">fonts/lora/Lora-Regular.ttf</string>
    <string name="lucky_wheel_rules_date_value">02/02/2026 – 28/02/2026</string>
    <string name="lucky_wheel_rules_method_body">"• Mỗi user sẽ có 1 lượt quay miễn phí
• Ngoài ra, bạn sẽ nhận thêm vé quay ngay khi hoàn thành nhiệm vụ học tập sau:"</string>
    <string name="lucky_wheel_rules_method_header">Cách thức nhận vé:</string>
    <string name="lucky_wheel_rules_regulation_header">Quy định nhận quà:</string>
    <string name="lucky_wheel_rules_reward_body">"• Voucher 50% nâng cấp 4English PRO tặng kèm gói PRO 1 tháng của app 4You
• Lì xì may mắn 200.000 VNĐ
• Set quà Tết
• Tài liệu tiếng Anh độc quyền
• Quà tặng vật lý bí mật
• Thông điệp đầu năm"</string>
    <string name="lucky_wheel_rules_reward_header">Cơ cấu giải thưởng:</string>
    <string name="lucky_wheel_rules_target_label">Đối tượng tham gia:</string>
    <string name="lucky_wheel_rules_target_value">Tất cả người dùng 4English</string>
    <string name="lucky_wheel_rules_terms_body">"• Mỗi giải thưởng có số lượng giới hạn
• Mọi quyết định cuối cùng thuộc về phía BTC 4English"</string>
    <string name="lucky_wheel_rules_terms_header">Điều khoản khác:</string>
    <string name="lucky_wheel_rules_time_label">Thời gian diễn ra:</string>
    <string name="lucky_wheel_rules_title_dialog">THỂ LỆ</string>
    <string name="lucky_wheel_spin_now">QUAY THƯỞNG NGAY!</string>
    <string name="lucky_wheel_task_1">10 từ vựng</string>
    <string name="lucky_wheel_task_2">2 bài tập</string>
    <string name="lucky_wheel_task_3">2 bài Tin tức &amp; 1 bài Nghe</string>
    <string name="mission_1_content">"Step 1. Read news or watch video
Step 2. Click the word to search definition
Step 3. Save the searched word 

*Save 3 or more new words"</string>
    <string name="mission_1_title">Create your own vocab pack</string>
    <string name="mission_2_content">Go to Vocab packs, search and download the one that you want to learn</string>
    <string name="mission_2_title">Explore the available vocab packs</string>
    <string name="mission_3_content">Learn current vocabulary to reach Level 1</string>
    <string name="mission_3_title">Learn new words</string>
    <string name="mission_4_content">Review vocabulary to reach Level 4</string>
    <string name="mission_4_title">Review vocabulary</string>
    <string name="mission_5_content">Do it everyday, spend at least 10 minutes to learn new words and review old ones.</string>
    <string name="mission_5_title">Create a habit</string>
    <string name="move_to_lv1">Yes, move back to Level 1 and remind me to review</string>
    <string name="msg_confirm_not_sure_word">Do you want to review this word more?</string>
    <string name="ok">OK</string>
    <string name="one_and_half">1 1/2x</string>
    <string name="onex">1x</string>
    <string name="raleway_font">fonts/raleway/Raleway-Regular.ttf</string>
    <string name="remind_after_2_hours">Yes, step back 1 level and remind me to review</string>
    <string name="remind_this_word">Remind this word</string>
    <string name="style">Style</string>
    <string name="style_underline">&lt;u style=\" border-bottom: 1px dashed #bcbcbc; text-decoration: none;\">Style&lt;/u></string>
    <string name="title_dialog_how_to_use">"To use app effectively, let's complete these tasks"</string>
    <string name="two_x">2x</string>
</resources>