<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_gravity="bottom" android:id="@id/container" android:background="@color/white" android:layout_width="match_parent" android:layout_height="172.0dp"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="horizontal" android:id="@id/top_buttons" android:layout_width="match_parent" android:layout_height="50.0dp">
        <LinearLayout android:layout_width="0.0dp" android:layout_height="match_parent" android:layout_weight="0.2" />
        <ImageButton android:id="@id/prev_button" android:background="@android:color/transparent" android:layout_width="0.0dp" android:layout_height="match_parent" android:layout_weight="0.2" app:srcCompat="@drawable/ic_fast_rewind" />
        <ImageButton android:id="@id/play_pause_button" android:background="@android:color/transparent" android:layout_width="0.0dp" android:layout_height="match_parent" android:layout_weight="0.2" app:srcCompat="@drawable/ic_play" />
        <ImageButton android:id="@id/next_button" android:background="@android:color/transparent" android:layout_width="0.0dp" android:layout_height="match_parent" android:layout_weight="0.2" app:srcCompat="@drawable/ic_fast_forward" />
        <LinearLayout android:layout_width="0.0dp" android:layout_height="match_parent" android:layout_weight="0.2" />
    </LinearLayout>
    <View android:id="@id/first_separator" android:background="@color/borders" android:layout_width="match_parent" android:layout_height="1.0dp" android:layout_below="@id/top_buttons" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/playback_speed_Layout" android:layout_width="match_parent" android:layout_height="70.0dp" android:weightSum="4.0" android:layout_below="@id/first_separator">
        <com.folioreader.ui.view.StyleableTextView android:textSize="14.0sp" android:gravity="center" android:id="@id/btn_half_speed" android:layout_width="0.0dp" android:layout_height="match_parent" android:text="@string/half_speed" android:layout_weight="1.0" app:folio_font="@string/andada_font" />
        <com.folioreader.ui.view.StyleableTextView android:textSize="17.0sp" android:gravity="center" android:id="@id/btn_one_x_speed" android:layout_width="0.0dp" android:layout_height="match_parent" android:text="@string/onex" android:layout_weight="1.0" app:folio_font="@string/lato_font" />
        <com.folioreader.ui.view.StyleableTextView android:textSize="14.0sp" android:gravity="center" android:id="@id/btn_one_and_half_speed" android:layout_width="0.0dp" android:layout_height="match_parent" android:text="@string/one_and_half" android:layout_weight="1.0" app:folio_font="@string/lora_font" />
        <com.folioreader.ui.view.StyleableTextView android:textSize="17.0sp" android:gravity="center" android:id="@id/btn_twox_speed" android:layout_width="0.0dp" android:layout_height="match_parent" android:text="@string/two_x" android:layout_weight="1.0" app:folio_font="@string/raleway_font" />
    </LinearLayout>
    <View android:id="@id/second_separator" android:background="@color/borders" android:layout_width="match_parent" android:layout_height="1.0dp" android:layout_below="@id/playback_speed_Layout" />
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="50.0dp" android:layout_below="@id/second_separator">
        <com.folioreader.ui.view.StyleableTextView android:textSize="17.0sp" android:gravity="center" android:id="@id/btn_backcolor_style" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/style" android:layout_weight="1.0" app:folio_font="@string/lato_font" />
        <View android:id="@id/third_separator" android:background="@color/borders" android:layout_width="1.0dp" android:layout_height="match_parent" />
        <com.folioreader.ui.view.StyleableTextView android:textSize="17.0sp" android:gravity="center" android:id="@id/btn_text_undeline_style" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/style_underline" android:drawableBottom="@drawable/dottet_line" android:layout_weight="1.0" android:layerType="software" app:folio_font="@string/lora_font" />
        <View android:id="@id/fourth_separator" android:background="@color/borders" android:layout_width="1.0dp" android:layout_height="match_parent" />
        <com.folioreader.ui.view.StyleableTextView android:textSize="17.0sp" android:gravity="center" android:id="@id/btn_text_color_style" android:layout_width="0.0dp" android:layout_height="match_parent" android:text="@string/style" android:layout_weight="1.0" app:folio_font="@string/raleway_font" />
    </LinearLayout>
</RelativeLayout>
