<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.appcompat.widget.LinearLayoutCompat android:orientation="vertical" android:background="@drawable/bg_rectangle_white_radius" android:padding="@dimen/activity_horizontal_margin" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/activity_horizontal_margin">
        <androidx.appcompat.widget.AppCompatTextView android:textSize="16.0sp" android:textColor="@color/color_primary_text" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dp" android:text="@string/remind_this_word" fontPath="fonts/OpenSans-Bold.ttf" />
        <androidx.appcompat.widget.AppCompatTextView android:textSize="18.0sp" android:textColor="@color/color_text_action" android:gravity="center" android:id="@id/word" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dp" fontPath="@string/font_bold" />
        <androidx.appcompat.widget.AppCompatTextView android:textSize="16.0sp" android:textColor="@color/color_primary_text" android:layout_gravity="center" android:id="@id/msg_confirm" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/msg_confirm_not_sure_word" />
        <RadioGroup android:id="@id/radio_group" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dp">
            <RadioButton android:theme="@style/SwitchBox" android:textColor="@color/color_primary_text" android:id="@id/value_1" android:layout_width="match_parent" android:layout_height="40.0dp" android:text="@string/remind_after_2_hours" />
            <RadioButton android:theme="@style/SwitchBox" android:textColor="@color/color_primary_text" android:id="@id/value_2" android:layout_width="match_parent" android:layout_height="40.0dp" android:text="@string/move_to_lv1" />
        </RadioGroup>
        <androidx.appcompat.widget.LinearLayoutCompat android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dp">
            <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/color_text_action" android:gravity="center" android:id="@id/btn_cancel" android:background="@drawable/selector_btn_white_border_radius" android:layout_width="0.0dp" android:layout_height="40.0dp" android:text="@string/btn_cancel" android:layout_weight="1.0" fontPath="fonts/OpenSans-SemiBold.ttf" />
            <View android:layout_width="30.0dp" android:layout_height="2.0dp" />
            <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/text_white_in_blue" android:gravity="center" android:id="@id/btn_ok" android:background="@drawable/selector_btn_action_radius" android:layout_width="0.0dp" android:layout_height="40.0dp" android:text="@string/ok" android:layout_weight="1.0" fontPath="fonts/OpenSans-SemiBold.ttf" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</LinearLayout>
