<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/bg_rectangle_white_radius" android:paddingLeft="20.0dp" android:paddingTop="30.0dp" android:paddingRight="20.0dp" android:paddingBottom="20.0dp" android:layout_width="match_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatTextView android:textSize="16.0sp" android:textColor="@color/title_update_dialog" android:gravity="center" android:id="@id/title" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/title_dialog_how_to_use" android:layout_alignParentTop="true" fontPath="@string/font_bold" />
    <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dp" android:layout_above="@id/btn_accept" android:layout_below="@id/title">
        <androidx.appcompat.widget.LinearLayoutCompat android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <androidx.appcompat.widget.LinearLayoutCompat android:orientation="vertical" android:background="@drawable/bg_rectangle_border" android:padding="10.0dp" android:layout_width="match_parent" android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatTextView android:textSize="16.0sp" android:textColor="@color/color_primary_text" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/mission_1_title" fontPath="@string/font_semi_bold" />
                <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/color_primary_text" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dp" android:text="@string/mission_1_content" />
                <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/color_text_action" android:layout_gravity="center" android:id="@id/status_save_word" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dp" android:drawablePadding="5.0dp" app:drawableLeftCompat="@drawable/ic_check_svg" />
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat android:orientation="vertical" android:background="@drawable/bg_rectangle_border" android:padding="10.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dp">
                <androidx.appcompat.widget.AppCompatTextView android:textSize="16.0sp" android:textColor="@color/color_primary_text" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/mission_2_title" fontPath="@string/font_semi_bold" />
                <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/color_primary_text" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dp" android:text="@string/mission_2_content" />
                <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/color_text_action" android:layout_gravity="center" android:id="@id/status_download_pack" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dp" android:drawablePadding="5.0dp" app:drawableLeftCompat="@drawable/ic_check_svg" />
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat android:orientation="vertical" android:background="@drawable/bg_rectangle_border" android:padding="10.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dp">
                <androidx.appcompat.widget.AppCompatTextView android:textSize="16.0sp" android:textColor="@color/color_primary_text" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/mission_3_title" fontPath="@string/font_semi_bold" />
                <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/color_primary_text" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dp" android:text="@string/mission_3_content" />
                <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/color_text_action" android:layout_gravity="center" android:id="@id/status_learn_word" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dp" android:drawablePadding="5.0dp" app:drawableLeftCompat="@drawable/ic_check_svg" />
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat android:orientation="vertical" android:background="@drawable/bg_rectangle_border" android:padding="10.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dp">
                <androidx.appcompat.widget.AppCompatTextView android:textSize="16.0sp" android:textColor="@color/color_primary_text" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/mission_4_title" fontPath="@string/font_semi_bold" />
                <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/color_primary_text" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dp" android:text="@string/mission_4_content" />
                <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/color_text_action" android:layout_gravity="center" android:id="@id/status_review_word" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dp" android:drawablePadding="5.0dp" app:drawableLeftCompat="@drawable/ic_check_svg" />
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat android:orientation="vertical" android:background="@drawable/bg_rectangle_border" android:padding="10.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dp">
                <androidx.appcompat.widget.AppCompatTextView android:textSize="16.0sp" android:textColor="@color/color_primary_text" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/mission_5_title" fontPath="@string/font_semi_bold" />
                <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/color_primary_text" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dp" android:text="@string/mission_5_content" />
                <androidx.appcompat.widget.AppCompatImageView android:layout_width="match_parent" android:layout_height="110.0dp" app:srcCompat="@drawable/ic_spaced_repetition" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
    <androidx.cardview.widget.CardView android:layout_gravity="center_horizontal" android:id="@id/btn_accept" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dp" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" app:cardBackgroundColor="@color/color_text_action" app:cardCornerRadius="10.0dp" app:cardElevation="5.0dp" app:cardUseCompatPadding="false" app:contentPadding="0.0dp">
        <androidx.appcompat.widget.AppCompatTextView android:textSize="14.0sp" android:textColor="@color/white" android:gravity="center" android:background="?selectableItemBackground" android:paddingLeft="20.0dp" android:paddingTop="8.0dp" android:paddingRight="20.0dp" android:paddingBottom="8.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/btn_close_learn" fontPath="fonts/OpenSans-SemiBold.ttf" />
    </androidx.cardview.widget.CardView>
</RelativeLayout>
